fix word wrap

--- a/src/common/styles/styles.css
+++ b/src/common/styles/styles.css
@@ -30,3 +30,7 @@ body {
 .flex-column {
     flex-direction: column;
 }
+
+.break-word {
+    word-wrap: break-word;
+}
